--- a/tests/send-json/style.css
+++ b/tests/send-json/style.css
@@ -3,6 +3,41 @@
   height: 1.5em;
 }
 
+h2 {
+  font-size: 16px;
+}
+
+h3 {
+  font-size: 12px;
+  font-weight: normal;
+  margin-top: 0;
+  margin-bottom: 0;
+  color: #888;
+  text-transform: uppercase;
+}
+
+.flexbox {
+  display: flex;
+}
+
+.flexchild {
+  border: solid 1px #eee;
+  padding: 10px;
+}
+
+#form-field {
+  width: 50%;
+}
+
+#json {
+  width: 100%;
+  height: 200px;
+}
+
+.buttonbox, .radiobox {
+  line-height: 25px;
+}
+
 .error {
   color: darkred;
   font-weight: bold;
