--- a/scheduler/static/css/panel.css
+++ b/scheduler/static/css/panel.css
@@ -52,7 +52,7 @@ section.group {
 }
 
 section.group.alerts {
-  padding: 2px 10px;
+  padding: 5px 10px 3px;
 }
 
 #status {
@@ -89,7 +89,7 @@ section.group.alerts {
 
 
 #time-current, #time-slip, #time-train, #next-train {
-  font-weight: bold;
+  font-weight: 600;
   color: white;
   text-shadow: 0 0 2px white;
 }
